fixed cart spacing

--- a/src/components/Cart/_Cart.sass
+++ b/src/components/Cart/_Cart.sass
@@ -1,7 +1,9 @@
 .Cart
   h3
     font-size: 24px
-    margin: 24px 0 0 32px
+    padding-bottom: .5em
+    border-bottom: 1px solid black
+
   .cart-container
     width: 100%
     padding: 0 2.5em
@@ -9,7 +11,7 @@
 
     & > div
       display: inline-block
-      padding: 0 1em
+      padding: 0 2em
 
     .items
       width: 70%
